--- a/Template/cpp.tmpl
+++ b/Template/cpp.tmpl
@@ -18,6 +18,8 @@ void solve();
 
 #define cinn(a) for(auto& i : a) cin>>i
 #define printa(a) for(auto& i : a) cout<<i<<" ";nl
+#define printb(a) for(int i=0;i<sizeof(a)/4;i++) cout<<a[i]<<" ";nl
+#define all(a) a.begin(),a.end()
 
 ll max(ll a,ll b){return a<b?b:a;}
 ll min(ll a,ll b){return a>b?b:a;}
