--- a/Template/cpp.tmpl
+++ b/Template/cpp.tmpl
@@ -19,6 +19,7 @@ void solve();
 #define cinn(a) for(auto& i : a) cin>>i
 #define printa(a) for(auto& i : a) cout<<i<<" ";nl
 #define printb(a) for(int i=0;i<sizeof(a)/4;i++) cout<<a[i]<<" ";nl
+#define printx(a) cout<<a<<"\n"
 #define all(a) a.begin(),a.end()
 
 ll max(ll a,ll b){return a<b?b:a;}
