--- a/Template/cpp.tmpl
+++ b/Template/cpp.tmpl
@@ -21,6 +21,9 @@ void solve();
 #define printb(a) for(int i=0;i<sizeof(a)/4;i++) cout<<a[i]<<" ";nl
 #define printx(a) cout<<a<<"\n"
 #define all(a) a.begin(),a.end()
+#define rall(a) a.rbegin(),a.rend()
+#define vi vector<int>
+#define vll vector<ll>
 
 ll max(ll a,ll b){return a<b?b:a;}
 ll min(ll a,ll b){return a>b?b:a;}
